# arbiter

./: .dockerignore  .gitignore  .watchmanconfig  AGENTS.md  Dockerfile  LOCAL-AGENTS.md  README.md  mypy.ini  noxfile.py  pyproject.toml  pyrefly.toml  pytest.ini  requirements-dev.txt
client/: README.md  hatch_build.py  pyproject.toml
client/arbiter-client/: README.md  hatch_build.py  pyproject.toml
client/go-cli/: .gitignore  README.md  go.mod
client/go-cli/cmd/arbiter/: main.go
client/go-cli/cmd/versiongen/: main.go
client/go-cli/internal/arbiterhttp/: client.go  client_test.go
client/go-cli/internal/cli/: artifact_commands_test.go  cli.go  cli_test.go  mcp_commands_test.go  native_artifact_test.go  native_commands_test.go  version.go  version_generated.go
client/go-cli/internal/mcp/: client.go  client_test.go
client/go-cli/internal/testutil/: testutil.go
client/python-cli/: README.md  pyproject.toml
client/python-cli/src/arbiter_python_client/: __init__.py  client.py  version.py
client/python-cli/tests/unit/: test_client.py
core/: pyproject.toml
core/newsfragments/: +account-tests.feature.md  +client-cap-fields.feature.md  +client-info-command.feature.md  +docker-container-owner-diagnosis.feature.md  +docker-install-metadata.feature.md  +docker-installed-pins.feature.md  +docker-up-mcp-url.feature.md  +example-plugin.feature.md  +go-client-core-version.bugfix.md  +initial-release.feature.md  +install-symlink-preflight.bugfix.md  +operator-trust-model-docs.misc.md  +prepare-refreshes-repo-wheels.feature.md  +python-client-command.breaking.md  +quiet-docker-bundle-prepare.misc.md  +release-build-helper.feature.md  +release-line-status-markers.feature.md  +runtime-config-permissions.feature.md  README.md
core/src/agent_arbiter/: __init__.py  app.py  cli_errors.py  client.py  config.py  main.py  services.py  version.py
core/src/agent_arbiter/conf/: __init__.py  config.yaml
core/src/agent_arbiter/plugins/: __init__.py
core/src/arbiter_core/: __init__.py  __main__.py  app.py  client.py  config.py  main.py  services.py  version.py
core/tests/: README.md
core/tests/integration/: conftest.py  test_cli_entrypoint.py
core/tests/unit/: test_app.py  test_build_go_client_tool.py  test_build_release_dists_tool.py  test_cli_errors.py  test_client.py  test_config.py  test_extract_release_notes_tool.py  test_main.py  test_package_arbiter_skill_tool.py  test_plan_pypi_publish_tool.py  test_upgrade_release_line_tool.py  test_upgrade_release_version_tool.py  test_version.py
examples/plugins/echo/: README.md  pyproject.toml
examples/plugins/echo/tests/: test_echo_example.py
imap/: pyproject.toml
imap/newsfragments/: +account-guidance-field.feature.md  +initial-release.feature.md  README.md
imap/src/agent_arbiter_imap/: __init__.py  client.py  config.py
imap/src/arbiter_imap/: __init__.py  config.py
imap/tests/integration/: test_deploy_docker_integration.py  test_imap_integration.py
imap/tests/unit/: test_imap.py
meta/arbiter-suite/: pyproject.toml
meta/arbiter-suite/news/: +initial-release.feature.md  README.md
meta/arbiter-suite/newsfragments/: +imap-folder-policy.feature.md  +include-client.feature.md  +meta-package-directory.misc.md  +release-version-guard.misc.md  README.md
meta/arbiter-suite/src/arbiter_suite/: __init__.py
plugins/imap/: pyproject.toml
plugins/imap/news/: README.md
plugins/imap/newsfragments/: +account-tests.feature.md  +artifact-command-helpers.feature.md  +attachment-metadata.bugfix.md  +bootstrap-config.feature.md  +imap-folder-policy.feature.md
plugins/imap/src/arbiter_imap/: __init__.py  client.py  (+4 more)
server/: pyproject.toml
server/news/: +client-url-setting.feature.md  +docker-helper-info-server.bugfix.md  +docker-subnet-overlap.bugfix.md  +docker-systemd-readiness.bugfix.md  +friendly-reploy-config-paths.bugfix.md  +initial-release.feature.md  +native-http-info-surface.feature.md  +quiet-docker-up-pip.feature.md  +version-hide-unknown-deployment-scope.bugfix.md  README.md
server/newsfragments/: +arbiter-client-wheel.feature.md  +client-info-trailing-yaml.bugfix.md  +deployment-scope.feature.md  +docker-bundle-meta-package-items.feature.md  +docker-bundle-plugin-menu.feature.md  +docker-editable-source.feature.md  +docker-helper-portability.bugfix.md  +docker-local-source-readonly.bugfix.md  +docker-prepare-pypi-only.feature.md  +docker-wheelhouse-prune.feature.md  +go-client-cross-build.feature.md  +go-client-server-version.bugfix.md  +non-root-docker-runtime.feature.md  +operation-check-bootstrap-variants.feature.md  +platform-ci-portability.bugfix.md  +plugin-storage-artifacts.feature.md  +preserve-installed-config.feature.md  +python-client-artifact-get.feature.md
server/src/: README.md
server/src/arbiter_server/: app.py  artifacts.py  cli_errors.py  config.py  decisions.py  main.py  services.py  storage.py  version.py
server/tests/: README.md  conftest.py
server/tests/integration/: conftest.py  test_cli_entrypoint.py  test_reploy_integration.py
server/tests/unit/: test_app.py  test_arbiter_client_package.py  test_arbiter_skill_package.py  test_arbiter_suite_package.py  test_artifacts.py  test_build_go_client_tool.py  test_build_release_dists_tool.py  test_bump_release_version_tool.py  test_cli_errors.py  test_config.py  test_decisions.py  test_extract_release_notes_tool.py  test_main.py  test_native_http_protocol.py  test_package_arbiter_skill_tool.py  test_plan_pypi_publish_tool.py  test_services.py  test_smoke_release_install_tool.py  test_storage.py  test_upgrade_release_line_tool.py  test_version.py
skill/: SKILL.md  agent-skill-installer.yaml  arbiter_skill_build.py  pyproject.toml
smtp/: pyproject.toml
smtp/newsfragments/: +account-guidance-field.feature.md  +account-tests.feature.md  +initial-release.feature.md  README.md
smtp/src/agent_arbiter_smtp/: __init__.py  client.py  config.py
smtp/src/arbiter_smtp/: __init__.py  client.py  config.py  idempotency.py
smtp/tests/integration/: test_smtp_integration.py
smtp/tests/unit/: test_smtp.py  test_smtp_runtime.py
(+231 files in other folders)
