[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-arbiter"
version = "0.1.1.dev1"
description = "Policy-controlled access to configured services for agents"
readme = "README.md"
requires-python = ">=3.10,<3.15"
authors = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
maintainers = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
keywords = ["agent", "policy", "mcp", "access-control", "smtp", "imap", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Email",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "agent-arbiter-core==0.1.1.dev1",
  "agent-arbiter-smtp==0.1.1.dev1",
  "agent-arbiter-imap==0.1.1.dev1",
]

[project.optional-dependencies]
dev = [
  "nox[pbs]>=2024.10,<2026.0",
  "aiosmtpd>=1.4.6,<2.0",
  "black>=25.0,<26.0",
  "mypy>=1.11,<2.0",
  "pytest>=7.4,<9.0",
  "trustme>=1.2,<2.0",
]

[project.urls]
Homepage = "https://github.com/omry/agent-arbiter"
Repository = "https://github.com/omry/agent-arbiter"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["core/tests", "smtp/tests", "imap/tests"]
pythonpath = ["core/src", "smtp/src", "imap/src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
mypy_path = "core/src:smtp/src:imap/src"

[tool.black]
target-version = ["py310"]
