[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-arbiter-imap"
version = "0.9.0"
description = "IMAP service plugin for Agent Arbiter"
readme = { text = "IMAP service plugin for Agent Arbiter.", content-type = "text/markdown" }
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
maintainers = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
keywords = ["agent", "mcp", "imap", "email"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Email",
]
dependencies = [
  "agent-arbiter-core>=0.9.0,<0.10.0",
]

[project.urls]
Homepage = "https://github.com/omry/agent-arbiter"
Repository = "https://github.com/omry/agent-arbiter"

[project.entry-points."agent_arbiter.services"]
imap = "agent_arbiter_imap:plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agent_arbiter_imap" = ["py.typed"]
