[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter-server"
version = "0.9.2.dev1"
description = "Policy-controlled HTTP server for agent-accessible services"
readme = { text = "Server package for Arbiter.", content-type = "text/markdown" }
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
maintainers = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
keywords = ["agent", "policy", "http", "access-control", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cryptography>=42,<49",
  "hydra-core>=1.3,<2.0",
  "starlette>=0.37,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.urls]
Homepage = "https://github.com/omry/arbiter"
Repository = "https://github.com/omry/arbiter"

[project.scripts]
arbiter-server = "arbiter_server.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"arbiter_server" = ["py.typed", "deploy/docker/*"]

[tool.towncrier]
name = "Arbiter Server"
package = "arbiter_server"
package_dir = "src"
filename = "NEWS.md"
directory = "news"
issue_format = "#{issue}"
