[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter-smtp"
version = "0.9.0.dev1"
description = "SMTP service plugin for Arbiter"
readme = { text = "SMTP service plugin for Arbiter.", content-type = "text/markdown" }
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
maintainers = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
keywords = ["agent", "mcp", "smtp", "email"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Email",
]
dependencies = [
  "arbiter-core>=0.9.0.dev1,<0.10.0",
  "diskcache>=5.6,<6.0",
]

[project.urls]
Homepage = "https://github.com/omry/arbiter"
Repository = "https://github.com/omry/arbiter"

[project.entry-points."arbiter.services"]
smtp = "arbiter_smtp:plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"arbiter_smtp" = ["py.typed"]

[tool.towncrier]
name = "Arbiter SMTP"
package = "arbiter_smtp"
package_dir = "src"
filename = "NEWS.md"
directory = "newsfragments"
issue_format = "#{issue}"
