[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter-python-client"
version = "0.9.0.dev2"
description = "Python client CLI for Arbiter MCP servers"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
maintainers = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
keywords = ["agent", "policy", "mcp", "access-control", "client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "anyio>=4,<5",
  "httpx>=0.27,<1.0",
  "mcp>=1.9.4,<2.0",
  "omegaconf>=2.3,<3.0",
]

[project.urls]
Homepage = "https://github.com/omry/arbiter"
Repository = "https://github.com/omry/arbiter"

[project.scripts]
arbiter-py = "arbiter_python_client.client:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"arbiter_python_client" = ["py.typed"]
