[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter-suite"
version = "0.9.2.dev1"
description = "Policy-controlled access to configured services for agents"
readme = { text = "Arbiter suite meta package.", content-type = "text/markdown" }
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
maintainers = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
keywords = ["agent", "policy", "mcp", "access-control", "smtp", "imap", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Email",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "arbiter-server==0.9.2.dev1",
  "arbiter-client==0.9.2.dev1",
  "arbiter-smtp==0.9.2.dev1",
  "arbiter-imap==0.9.2.dev1",
]

[project.urls]
Homepage = "https://github.com/omry/arbiter"
Repository = "https://github.com/omry/arbiter"

[tool.setuptools]
py-modules = []

[tool.towncrier]
name = "Arbiter"
filename = "NEWS.md"
directory = "news"
issue_format = "#{issue}"
